--- a/app/views/lines/_dashboard.html.erb
+++ b/app/views/lines/_dashboard.html.erb
@@ -218,7 +218,18 @@
           <h3>Acá irá el chat</h3>
         </div>
         <div class="box-interview">
-          <h4>Acá ira el calendario para entrevistas</h4>
+          <div class="calendar-container">
+            <%= month_calendar(events: @meetings, end_attribute: :end_time) do |date, meetings| %>
+              <%= date %>
+
+              <% meetings.each do |meeting| %>
+                <div class="meeting">
+                  <p><%= meeting.name %></p>
+                  <small><%= meeting.time unless meeting.multi_days? %></small>
+                </div>
+              <% end %>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
