--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,10 +8,12 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
-
+@import "flatpickr/dist/flatpickr";
+@import "simple_calendar";
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body{
