--- a/app/views/pages/cursos.html.erb
+++ b/app/views/pages/cursos.html.erb
@@ -1,4 +1,8 @@
 <div class="container mt-7">
+  <div class="texto_presentacion text-center">
+    <h1><strong>Nuestros Cursos Especializados</strong></h1>
+    <h4>Explora los cursos especializados acorde a tus necesidades específicas de tesis</h4>
+  </div>
   <div class="card-cursos">
     <div class="card-cursos-2 d-flex m-4 p-0">
       <%= image_tag "libros_3.jpg", class:"img-cursos"%>
