--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -55,3 +55,33 @@
   color: black;
   background: #FFE67D;
 }
+
+.btn-edit-1 {
+  color: black;
+  background: #ffdc5e;
+  padding: 6px 20px;
+  border-radius: 16px;
+  text-decoration: none;
+  border: none !important;
+}
+
+.btn-edit-1:hover {
+  text-decoration: none;
+  color: black;
+  background: #FFE67D;
+}
+
+.btn-edit-2{
+  color: black;
+  background: #ffdc5e;
+  text-decoration: none !important;
+  padding: 1%;
+  padding-right: 2%;
+  padding-left: 2%;
+  border-radius: 16px;
+}
+.btn-edit-2:hover {
+  text-decoration: none;
+  color: black;
+  background: #FFE67D;
+}
