--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -3,11 +3,13 @@
   background-size: cover;
   background-position: 30%;
 }
+
 .login {
   display: grid;
   grid-template-columns: 1fr 2fr;
   height: calc(100vh - 60px);
 }
+
 .container-form {
   display: flex;
   justify-content: center;
@@ -93,32 +95,26 @@ input {
   font-weight: lighter !important;
 }
 
+.container-edit {
+  padding: 4% !important;
+  background-color: white;
+  height: calc(100vh-60px) !important;
+  overflow: auto;
+}
 
-.background-perfil {
-  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-  height: 300px;
-  background-position: 38%;
+.background-edit {
+  background-image: url(https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
   background-size: cover;
+  background-position: 10% 37%;
+  width: 600px;
+  height: calc(100vh-60px) !important;
 }
 
-.container-perfil {
-  margin: 0 auto;
-  margin-top: -300px;
+.edit-photo-user {
+  border: none !important;
+  border-radius: 0px !important;
 }
 
-.card-perfil-2 {
-  padding: 3%;
-  background: white;
-  margin: 121px;
-  width: 75%;
-}
-
-.img-perfil {
-  width: 47%;
-  height: 233px;
-}
-
-.title-perfil {
-  color: white;
-  font-weight: bold;
+.espacio-navbar {
+  height: 60px;
 }
