--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,56 +1,65 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="espacio-navbar">
+</div>
+<div class="login">
+  <div class="background-edit"></div>
+  <div class="container-edit">
+      <h2>Editar <%= resource_name.to_s.humanize %></h2>
+      <div>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+          <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+          <div class="form-inputs">
+            <%= f.input :email, required: true, autofocus: true %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+            <% end %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+            <%= f.input :first_name,
+                        required: false,
+                        autofocus: true,
+                        input_html: { autocomplete: "first_name" }%>
+            <%= f.input :last_name,
+                        required: false,
+                        autofocus: true,
+                        input_html: { autocomplete: "last_name" }%>
+            <%= f.input :university,
+                        required: false,
+                        autofocus: true,
+                        input_html: { autocomplete: "university" }%>
+            <%= f.input :level_instruction,
+                        required: false,
+                        autofocus: true,
+                        input_html: { autocomplete: "level_instruction" }%>
+            <%= f.input :phone,
+                        required: false,
+                        autofocus: true,
+                        input_html: { autocomplete: "phone" }%>
+            <%= f.input :photo, as: :file,
+                        input_html: {class:"edit-photo-user"} %>
+            <%= f.input :password,
+                        hint: "leave it blank if you don't want to change it",
+                        required: false,
+                        input_html: { autocomplete: "new-password" } %>
+            <%= f.input :password_confirmation,
+                        required: false,
+                        input_html: { autocomplete: "new-password" } %>
+            <%= f.input :current_password,
+                        hint: "we need your current password to confirm your changes",
+                        required: true,
+                        input_html: { autocomplete: "current-password" } %>
+          </div>
 
-    <%= f.input :first_name,
-                required: false,
-                autofocus: true,
-                input_html: { autocomplete: "first_name" }%>
-    <%= f.input :last_name,
-                required: false,
-                autofocus: true,
-                input_html: { autocomplete: "last_name" }%>
-    <%= f.input :university,
-                required: false,
-                autofocus: true,
-                input_html: { autocomplete: "university" }%>
-    <%= f.input :level_instruction,
-                required: false,
-                autofocus: true,
-                input_html: { autocomplete: "level_instruction" }%>
-    <%= f.input :phone,
-                required: false,
-                autofocus: true,
-                input_html: { autocomplete: "phone" }%>
-    <%= f.input :photo, as: :file %>
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+          <div class="form-actions d-flex justify-content-center">
+            <%= f.button :submit, "Guardar cambios", class:"btn-edit-1" %>
+          </div>
+        <% end %>
+      </div>
+      <br>
+      <h3>Cancelar mi cuenta</h3>
+
+      <p>¿Seguro? <%= link_to "Cancelar", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+      <%= link_to "Atras", :back , class:"btn-edit-2" %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
