--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,7 @@
       <div class="card m-2 p-0">
         <%= image_tag "card-2.jpg"%>
         <div class="card-body">
-          <h5 class="card-title">Nuestros cursos</h5>
+          <h5><%= link_to 'Nuestros cursos', cursos_path, class: 'card-title' %></h5>
           <p class="card-text">Conoce nuestra oferta adaptada a tus necesidades y circunstancias.</p>
         </div>
       </div>
