cambios raros en las columnas

--- a/app/views/lines/_dashboard.html.erb
+++ b/app/views/lines/_dashboard.html.erb
@@ -96,8 +96,12 @@
                                     <div class="card-task">
                                       <% if task.tipo == 'video' %>
                                         <div class='container-video'>
-                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
                                         </div>
+                                      <% end %>
+                                      <% if task.auto_check %>
+                                        <label for="completed"> Marcar como terminado</label>
+                                        <input type="checkbox" name="completed" id="completed">
                                       <% end %>
                                     </div>
                                   <% end %>
@@ -115,8 +119,12 @@
                                     <div class="card-task">
                                       <% if task.tipo == 'video' %>
                                         <div class='container-video'>
-                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
                                         </div>
+                                      <% end %>
+                                      <% if task.auto_check %>
+                                        <label for="completed"> Marcar como terminado</label>
+                                        <input type="checkbox" name="completed" id="completed">
                                       <% end %>
                                     </div>
                                   <% end %>
@@ -175,8 +183,12 @@
                                     <div class="card-task">
                                       <% if task.tipo == 'video' %>
                                         <div class='container-video'>
-                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
                                         </div>
+                                      <% end %>
+                                      <% if task.auto_check %>
+                                        <label for="completed"> Marcar como terminado</label>
+                                        <input type="checkbox" name="completed" id="completed">
                                       <% end %>
                                     </div>
                                   <% end %>
@@ -194,8 +206,12 @@
                                     <div class="card-task">
                                       <% if task.tipo == 'video' %>
                                         <div class='container-video'>
-                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
                                         </div>
+                                      <% end %>
+                                      <% if task.auto_check %>
+                                        <label for="completed"> Marcar como terminado</label>
+                                        <input type="checkbox" name="completed" id="completed">
                                       <% end %>
                                     </div>
                                   <% end %>
