--- a/app/views/lines/index.html.erb
+++ b/app/views/lines/index.html.erb
@@ -1,4 +1,4 @@
-<% if current_user.role == 'teacher' %>
+<% if current_user.teacher %>
   <%= render 'dashboard_teacher' %>
 <% else %>
   <% if current_user.admited %>
