--- a/app/views/lines/_dashboard.html.erb
+++ b/app/views/lines/_dashboard.html.erb
@@ -96,7 +96,7 @@
                                     <div class="card-task">
                                       <% if task.tipo == 'video' %>
                                         <div class='container-video'>
-                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
                                         </div>
                                       <% end %>
                                     </div>
@@ -115,7 +115,7 @@
                                     <div class="card-task">
                                       <% if task.tipo == 'video' %>
                                         <div class='container-video'>
-                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
                                         </div>
                                       <% end %>
                                     </div>
@@ -175,7 +175,7 @@
                                     <div class="card-task">
                                       <% if task.tipo == 'video' %>
                                         <div class='container-video'>
-                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
                                         </div>
                                       <% end %>
                                     </div>
@@ -194,7 +194,7 @@
                                     <div class="card-task">
                                       <% if task.tipo == 'video' %>
                                         <div class='container-video'>
-                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+                                          <div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="<%= task.url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
                                         </div>
                                       <% end %>
                                     </div>
