--- a/app/views/pages/articulo1.html.erb
+++ b/app/views/pages/articulo1.html.erb
@@ -1,8 +1,6 @@
-<div class="container">
-  <br>
-  <br>
-  <br>
-  <br>
+<div class="espacio-navbar">
+</div>
+<div class="container mt-3">
   <div class="d-flex justify-content-between">
     <h3 class="title">IDEA DE INVESTIGACIÓN</h3>
     <p>Martes 18 de Mayo, 2021 | Autor: Mariamer Henriquez</p>
