--- a/app/views/pages/recursos.html.erb
+++ b/app/views/pages/recursos.html.erb
@@ -1,7 +1,6 @@
+<div class="espacio-navbar">
+</div>
 <div class="container">
-  <br>
-  <br>
-  <br>
   <div class="container-recurso">
     <br>
     <h1 class="text-center">Publicación más reciente</h1>
