--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -38,6 +38,7 @@
   background-color:#FCFBFF;
   margin: 35px auto;
   padding: 30px 50px;
+  margin-top: 0%;
   h2 {
     font-weight: bold;
     font-size: 24px;
