--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,24 +1,34 @@
+<div class="espacio-navbar">
+</div>
 <div class="background-perfil">
-
 </div>
 
 <div class='container-perfil'>
-<br>
-<br>
-<br>
   <div class="title-perfil text-center">
     <h1>¡Hola <%= current_user.first_name %>!</h1>
   </div>
-  <div class="card-perfil-2 d-flex justify-content-between">
-    <div>
-      <h4><strong>Nombres y apellidos</strong></h4>
-      <p><%= "#{@user.first_name} #{@user.last_name}" %></p>
-      <h4><strong>Correo electrónico</strong></h4>
-      <p><%= @user.email %></p>
+  <div class="card-perfil-2 ">
+    <div class="container">
+      <div class="row">
+        <div class="col-8">
+          <h5><strong>Nombres y apellidos</strong></h5>
+          <p><i class="fas fa-angle-right fecha"></i><%= "#{@user.first_name} #{@user.last_name}" %></p>
+          <h5><strong>Correo electrónico</strong></h5>
+          <p><i class="fas fa-angle-right fecha"></i><%= @user.email %></p>
+          <h5><strong>Universidad</strong></h5>
+          <p><i class="fas fa-angle-right fecha"></i><%= current_user.university %></p>
+          <h5><strong>Nivel de instrucción</strong></h5>
+          <p><i class="fas fa-angle-right fecha"></i><%= current_user.level_instruction %></p>
+          <h5><strong>Celular</strong></h5>
+          <p><i class="fas fa-angle-right fecha"></i><%= current_user.phone %></p>
+        </div>
+        <div class="col-4">
+          <%= image_tag "andre_felipe.jpg", width:"300" %>
+        </div>
+      </div>
+    </div>
+    <div class="text-center">
       <p><%= link_to 'Edita tu perfil', edit_user_registration_path, class:"btn-yours" %></p>
     </div>
-    <br>
-    <%= image_tag "perfil.jpg", class:"img-perfil" %>
-  </div>
   </div>
 </div>
