--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -90,6 +90,13 @@ a {
   }
 }
 
+.green {
+  color: #1CD1A1
+}
+.green-2 {
+  color: #9fffe5 !important
+}
+
 
 .content-dash {
   background-color: white !important;
