--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -77,6 +77,9 @@
 }
 
 .btn-edit-1 {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   color: black;
   background: #ffdc5e;
   padding: 6px 20px;
@@ -87,11 +90,14 @@
 
 .btn-edit-1:hover {
   text-decoration: none;
-  color: black;
-  background: #FFE67D;
+  color: blue;
+  background: #ffe67d;
 }
 
-.btn-edit-2{
+.btn-edit-2 {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   color: black;
   background: #ffdc5e;
   text-decoration: none !important;
@@ -102,6 +108,6 @@
 }
 .btn-edit-2:hover {
   text-decoration: none;
-  color: black;
-  background: #FFE67D;
+  color: blue;
+  background: #ffe67d;
 }
