--- a/app/assets/stylesheets/components/_articulo1.scss
+++ b/app/assets/stylesheets/components/_articulo1.scss
@@ -13,8 +13,10 @@
 
 .img-articulo1 {
   width: 32%;
-  box-shadow: 3px 4px 17px rgb(124, 119, 119);
   margin: 2%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 .centro_articulo {
@@ -34,8 +36,10 @@
 
 .img-articulo1-2 {
   width: 22%;
-  box-shadow: 3px 4px 17px rgb(124, 119, 119);
   margin: 2%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 .text-subtitulo h4 {
