--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,7 @@
 <div class="login">
   <div class="background-edit"></div>
   <div class="container-edit">
-      <h2>Editar <%= resource_name.to_s.humanize %></h2>
+      <h2 class="text-center">Editar</h2>
       <div>
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= f.error_notification %>
