--- a/app/views/lines/_dashboard_teacher.html.erb
+++ b/app/views/lines/_dashboard_teacher.html.erb
@@ -27,6 +27,38 @@
           <%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
         </div>
     </div>
-    <div class="bar-space"></div>
+    <div class="bar-space">
+      <!-- Inicio tabla datos alummni -->
+      <div class="container">
+        <h1>Tus asesorados</h1>
+          <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                <th scope="col">Avatar</th>
+                <th scope="col">Nombres</th>
+                <th scope="col">Apellidos</th>
+                <th scope="col">Email</th>
+                <th scope="col">Fecha Inicio</th>
+                <th scope="col">Detalles</th>
+                </tr>
+            </thead>
+            <% @dashboard.each do |alummni| %>
+            <tbody>
+              <tr>
+                <th scope="row"><%= cl_image_tag alummni.photo.key, class: "avatar" %></th>
+                <td><%= alummni.first_name %></td>
+                <td><%= alummni.last_name %></td>
+                <td><%= alummni.email %></td>
+                <td><%= alummni.created_at.strftime('%d/%m/%y') %></td> 
+              </tr>
+            <% end %>
+            </tbody> 
+          </table>
+        </div>
+
+<!-- Fin de la tabla datos alummnis -->
+    </div>
   </div>
+</div>
+
 </div>
