--- a/app/views/lines/_dashboard_teacher.html.erb
+++ b/app/views/lines/_dashboard_teacher.html.erb
@@ -51,7 +51,7 @@
             <% @dashboard.each do |alummni| %>
             <tbody>
               <tr>
-                <th scope="row"><%= cl_image_tag alummni.photo.key, class: "avatar" %></th>
+                <td scope="row"><%#<%= cl_image_tag(alummni.photo.key, class: "avatar", default: "") %></td>
                 <td><%= alummni.first_name %></td>
                 <td><%= alummni.last_name %></td>
                 <td><%= alummni.email %></td>
