estilo botones dashboard teacher

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -111,3 +111,21 @@
   color: blue;
   background: #ffe67d;
 }
+
+.btn-detallea {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  color: white;
+  padding: 8px 24px;
+  border-radius: 25px;
+  font-weight: bold;
+  background: linear-gradient(#ffe67d, #d1b853);
+  border: 1px solid #d1b853;
+}
+
+.btn-detallea:hover {
+  text-decoration: none;
+  color: blueviolet;
+  background: #ffe67d;
+}
