--- a/app/views/lines/_dashboard_teacher.html.erb
+++ b/app/views/lines/_dashboard_teacher.html.erb
@@ -56,6 +56,7 @@
                 <td><%= alummni.last_name %></td>
                 <td><%= alummni.email %></td>
                 <td><%= alummni.created_at.strftime('%d/%m/%y') %></td> 
+                <td><%= link_to '<i class="fas fa-info-circle"></i>'.html_safe, "#", class:"btn btn-detallea" %></td>
               </tr>
             <% end %>
             </tbody> 
